# diagonals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/shaders/: grid.shader  moves.shader  player.shader
src/: component.h  game.cpp  game.h  main.cpp  opengl_helping_functions.cpp  opengl_helping_functions.h  text_renderer.cpp  text_renderer.h  utils.h
src/components/: grid.cpp  grid.h  moves.cpp  moves.h  player.cpp  player.h  start_screen.cpp  start_screen.h
src/graphics/: index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
